# internal-coherence-maximization

./: README.md  pyproject.toml
data/: few_shot_instruct_model.csv  labelled_dataset.csv  zero_shot_base_model.csv  zero_shot_instruct_model.csv
icm/: baseline.py  build_prompt.py  dataloader.py  llm_client.py  main.py  plotting.ipynb
