[project]
name = "mats-9-0-feng-ududec-work-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
